--- a/sideloadedlibstt/libuasharedtools.bundle/en.lproj/Localizable.strings
+++ b/sideloadedlibstt/libuasharedtools.bundle/en.lproj/Localizable.strings
@@ -7,7 +7,7 @@
 	<key>APPEARANCE_OPTIONS</key>
 	<string>Appearance Options</string>
 	<key>APP_RESTART_REQUIRED</key>
-	<string>Enabling this feature requires restarting the Instagram app. You can close the app now by selecting &#39;Close App&#39; and restarting.</string>
+	<string>Enabling this feature requires restarting the Instagram app. You can close the app now by selecting &apos;Close App&apos; and restarting.</string>
 	<key>CANCEL</key>
 	<string>Cancel</string>
 	<key>CHANGE_PP_PASSWORD</key>
